# engine-2026

./: .gitignore  config.py  pyproject.toml
advantage_net_bot/: README.md  player.py
advantage_net_bot/skeleton/: actions.py  bot.py  runner.py  states.py
advantage_net_bot/tests/: test_player_helpers.py
sim/: CMakeLists.txt
sim/src/: abstraction.h  batch_test.cpp  bot.h  buffer_test.cpp  buffers.h  deck.h  driver.h  encoding.h  engine.cpp  eval.h  inference.cpp  inference.h  infoset.h  net_policy.h  policy.h  samples.h  state.h  torch_engine.cpp  train.cpp  traversal.cpp  traversal.h  traverse.cpp  traverse.h  trt_policy.h
train/: README.md  __init__.py  data.py  features.py  model.py  test_model.py  train_advantage.py
